# selene

./: README.md  pyproject.toml  pytest.ini
functions/registration/: handler.py
functions/registration/command/: __init__.py  authn_registration.py  authn_registration_complete.py  authn_registration_initiate.py
functions/registration/domain/: registration.py  value.py  webauthn_helpers.py  webauthn_registration.py
functions/registration/handlers/: registration_completion_handler.py  registration_initiation_handler.py
tests/: conftest.py  test_selene.py
tests/shared/: __init__.py  dynamo.py  fixture_helpers.py  key_management_helpers.py  lambda_events.py  oauth_client_helpers.py  request_fixtures.py  s3.py  ssm.py  subject_helpers.py
tests/test_common/test_domain/test_activities/: test_activity.py  test_activity_group.py
tests/test_common/test_domain/test_oauth/: test_client_credential_token.py
tests/test_common/test_domain/test_subject/: test_registration.py
tests/test_common/test_key_management/test_domain/: test_public_key.py
tests/test_common/test_util/: test_enum_helpers.py  test_reifier_decorator.py
tests/test_key_management/test_domain/: test_jwt.py  test_kek.py  test_key_management.py  test_public_key.py  test_sym_enc.py
tests/test_registration/test_domain/: test_registration.py
tests/test_registration/test_handler/: test_registration.py  test_registration_handler.py
tests/test_registration/test_integration/: test_handler.py
