[tool.poetry]
name = "selene"
version = "0.1.0"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]
packages = [
    { include = "common", from = "packages"  },
    { include = "key_management", from = "packages"  }
]


[tool.poetry.dependencies]
python = "^3.8"
pyfuncify = {git = "https://github.com/wildfauve/pyfuncify.git", rev = "main"}
mypy = "^0.931"
pynamodb = "^5.2.1"
PyMonad = "^2.4.0"
boto3 = "^1.20.54"
webauthn = "^1.2.1"
attrs = "^21.4.0"
cryptography = "^36.0.1"
jwt = "^1.3.1"
jwcrypto = "^1.0"
simple-memory-cache = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-env = "^0.6.2"
moto = {extras = ["ssm", "s3", "dynamo"], version = "^3.0.0"}
requests-mock = "^1.9.3"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
